--- a/Google_books/appli/index.html
+++ b/Google_books/appli/index.html
@@ -1,11 +1,11 @@
 <html>
-   <head>
-   </head>
-   <body>
-     <form method"POST">
-         <label>NOMBRE DEL LIBRO</label>
-         <input type="text"name="book_name">
-         <button type="submit">BUSCAR</button>
-     </form>
-  </body> 
+    <head>
+    </head>
+    <body>
+        <form method="POST">
+            <label>NOMBRE DEL LIBRO</label></br>
+            <input type="text" name="book_name"></br>
+            <button type="submit">BUSCAR</button>
+        </form>
+    </body> 
 </html>
